<resources>
    <string name="app_name">IAK Beginner</string>

    <string name="mOrder">Order</string>
    <string name="mAbout">About</string>
    <string name="mExit">Exit</string>
    <string name="yourname">Your Name</string>
    <string name="hello">Hello!</string>
    <string name="from">From: Chia</string>
    <string name="click">Click Me!</string>
    <string name="labelabout_judul">Tentang Aplikasi</string>
    <string name="labelabout_konten">Aplikasi ini dibuat oleh:</string>
    <string name="labelabout_konten1">Chintya Rifyaningrum</string>
    <string name="labelabout_konten2">NIM: 1511500868</string>
    <string name="labelabout_konten3">&#169;2017 Copyright chiachintyaaa</string>
</resources>
